--- a/template_homepage.html
+++ b/template_homepage.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./resources/css/style.css">
     <title>Университет по библиотекознание и информационни технологии</title>
 </head>
@@ -16,7 +17,13 @@
          -->
 
          <div class="main-header wrapper">
-            <!-- <ul class="main-header--navigation">
+            <div class="main-header--btn">
+                <a href="#">
+                    <i class="fa-solid fa-bars"></i>
+                </a>
+            </div>
+
+            <ul class="main-header--navigation">
                 <li class="item">
                     <a href="">Електронна поща</a>
                 </li>
@@ -32,7 +39,7 @@
                 <li class="item">
                     <a href="">Профил на купувача</a>
                 </li>
-            </ul> -->
+            </ul>
 
             <div class="main-header--title">
                 <div class="logo">
